--- a/src/components/layout/MusicPlayerPanel.module.css
+++ b/src/components/layout/MusicPlayerPanel.module.css
@@ -21,7 +21,7 @@
 
 .sideTab {
     position: absolute;
-    top: 380px;
+    top: 360px;
     padding: 16px 10px;
     display: flex;
     flex-direction: column;
